--- a/Presentation/General Analysis.html
+++ b/Presentation/General Analysis.html
@@ -11,6 +11,7 @@
       <th>Negativ Mean</th>
       <th>Positiv Bars</th>
       <th>Negativ Bars</th>
+      <th>Total Bars</th>
     </tr>
   </thead>
   <tbody>
@@ -25,6 +26,7 @@
       <td>-0.48 %</td>
       <td>51.10 %</td>
       <td>48.84 %</td>
+      <td>1816</td>
     </tr>
     <tr>
       <th>EURUSD</th>
@@ -37,6 +39,7 @@
       <td>-0.37 %</td>
       <td>49.94 %</td>
       <td>49.89 %</td>
+      <td>1816</td>
     </tr>
     <tr>
       <th>GBPUSD</th>
@@ -49,6 +52,7 @@
       <td>-0.42 %</td>
       <td>48.90 %</td>
       <td>50.88 %</td>
+      <td>1816</td>
     </tr>
     <tr>
       <th>USDCAD</th>
@@ -61,6 +65,7 @@
       <td>-0.37 %</td>
       <td>51.21 %</td>
       <td>48.68 %</td>
+      <td>1816</td>
     </tr>
     <tr>
       <th>USDCHF</th>
@@ -73,6 +78,7 @@
       <td>-0.38 %</td>
       <td>52.23 %</td>
       <td>47.60 %</td>
+      <td>1816</td>
     </tr>
     <tr>
       <th>USDJPY</th>
@@ -85,6 +91,7 @@
       <td>-0.36 %</td>
       <td>50.17 %</td>
       <td>49.56 %</td>
+      <td>1816</td>
     </tr>
   </tbody>
 </table>
