--- a/Presentation/Table Asset.html
+++ b/Presentation/Table Asset.html
@@ -17,7 +17,7 @@
   </thead>
   <tbody>
     <tr>
-      <th>EURUSD Major Daily 2021</th>
+      <th>Major Daily 2021</th>
       <td>-2.36 %</td>
       <td>-10.91 % p.a.</td>
       <td>4.97 %</td>
